syntax = "proto3";
package upload;
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
option java_multiple_files = true;
option java_package = "com.topcoder.onlinereview.component.grpcclient.upload.protos";
option java_outer_classname = "UploadProtos";

message EntityProto {
    google.protobuf.Int64Value id = 1;
    google.protobuf.StringValue create_user = 2;
    google.protobuf.Timestamp create_date = 3;
    google.protobuf.StringValue modify_user = 4;
    google.protobuf.Timestamp modify_date = 5;
    google.protobuf.StringValue name = 6;
    google.protobuf.StringValue description = 7;
}

message IdProto {
    google.protobuf.Int64Value id = 1;
}

message RemoveSubmissionImageRequest {
    google.protobuf.Int64Value submission_id = 1;
    google.protobuf.Int32Value image_id = 2;
}

message EntityIdsProto {
    repeated int64 ids = 1;
}

message EntityListProto {
    repeated EntityProto entities = 1;
}

message UploadProto {
    google.protobuf.Int64Value upload_id = 1;
    google.protobuf.StringValue create_user = 2;
    google.protobuf.Timestamp create_date = 3;
    google.protobuf.StringValue modify_user = 4;
    google.protobuf.Timestamp modify_date = 5;
    google.protobuf.Int64Value project_id = 6;
    google.protobuf.Int64Value project_phase_id = 7;
    google.protobuf.Int64Value resource_id = 8;
    google.protobuf.Int64Value upload_type_id = 9;
    google.protobuf.Int64Value upload_status_id = 10;
    google.protobuf.StringValue parameter = 11;
    google.protobuf.StringValue upload_desc = 12;
    google.protobuf.StringValue url = 13;
}

message SubmissionProto {
    google.protobuf.Int64Value submission_id = 1;
    google.protobuf.StringValue create_user = 2;
    google.protobuf.Timestamp create_date = 3;
    google.protobuf.StringValue modify_user = 4;
    google.protobuf.Timestamp modify_date = 5;
    google.protobuf.Int64Value submission_status_id = 6;
    google.protobuf.Int64Value submission_type_id = 7;
    google.protobuf.DoubleValue screening_score = 8;
    google.protobuf.DoubleValue initial_score = 9;
    google.protobuf.DoubleValue final_score = 10;
    google.protobuf.Int64Value placement = 11;
    google.protobuf.Int32Value user_rank = 12;
    google.protobuf.BoolValue mark_for_purchase = 13;
    google.protobuf.Int64Value prize_id = 14;
    google.protobuf.Int64Value upload_id = 15;
    google.protobuf.StringValue thurgood_job_id = 16;
}

message UploadCompleteProto {
    UploadProto upload = 1;
    EntityProto upload_type = 2;
    EntityProto upload_status = 3;
}

message UploadCompleteListProto {
    repeated UploadCompleteProto uploads = 1;
}

message SubmissionCompleteProto {
    SubmissionProto submission = 1;
    EntityProto submission_type = 2;
    EntityProto submission_status = 3;
    PrizeProto prize = 4;
    PrizeTypeProto prize_type = 5;
    UploadCompleteProto upload = 6;
}

message SubmissionCompleteListProto {
    repeated SubmissionCompleteProto submissions = 1;
}

message PrizeProto {
    google.protobuf.Int64Value prize_id = 1;
    google.protobuf.Int32Value place = 2;
    google.protobuf.DoubleValue prize_amount = 3;
    google.protobuf.Int32Value number_of_submissions = 4;
    google.protobuf.StringValue create_user = 5;
    google.protobuf.Timestamp create_date = 6;
    google.protobuf.StringValue modify_user = 7;
    google.protobuf.Timestamp modify_date = 8;
}

message PrizeTypeProto {
    google.protobuf.Int64Value prize_type_id = 1;
    google.protobuf.StringValue prize_type_desc = 2;
}

message SubmissionImageProto {
    google.protobuf.Int64Value submission_id = 1;
    google.protobuf.Int32Value image_id = 2;
    google.protobuf.Int32Value sort_order = 3;
    google.protobuf.Timestamp create_date = 4;
    google.protobuf.Timestamp modify_date = 5;
}

message SubmissionImageListProto {
    repeated SubmissionImageProto submission_images = 1;
}

message MimeTypeProto {
    google.protobuf.Int64Value mime_type_id = 1;
    google.protobuf.StringValue mime_type_desc = 2;
    google.protobuf.Int64Value file_type_id = 3;
    google.protobuf.StringValue file_type_desc = 4;
    google.protobuf.Int32Value sort = 5;
    google.protobuf.BoolValue image_file_ind = 6;
    google.protobuf.StringValue extension = 7;
    google.protobuf.BoolValue bundled_file_ind = 8;
}

message MimeTypeListProto {
    repeated MimeTypeProto mime_types = 1;
}

service UploadService {
    rpc addUploadType(EntityProto) returns (google.protobuf.Empty);
    rpc addUploadStatus(EntityProto) returns (google.protobuf.Empty);
    rpc addSubmissionType(EntityProto) returns (google.protobuf.Empty);
    rpc addSubmissionStatus(EntityProto) returns (google.protobuf.Empty);
    rpc addUpload(UploadProto) returns (google.protobuf.Empty);
    rpc addSubmission(SubmissionProto) returns (google.protobuf.Empty);
    rpc addSubmissionImage(SubmissionImageProto) returns (google.protobuf.Empty);
    rpc removeUploadType(IdProto) returns (google.protobuf.Empty);
    rpc removeUploadStatus(IdProto) returns (google.protobuf.Empty);
    rpc removeSubmissionType(IdProto) returns (google.protobuf.Empty);
    rpc removeSubmissionStatus(IdProto) returns (google.protobuf.Empty);
    rpc removeUpload(IdProto) returns (google.protobuf.Empty);
    rpc removeSubmission(IdProto) returns (google.protobuf.Empty);
    rpc removeSubmissionImage(RemoveSubmissionImageRequest) returns (google.protobuf.Empty);
    rpc updateUploadType(EntityProto) returns (google.protobuf.Empty);
    rpc updateUploadStatus(EntityProto) returns (google.protobuf.Empty);
    rpc updateSubmissionType(EntityProto) returns (google.protobuf.Empty);
    rpc updateSubmissionStatus(EntityProto) returns (google.protobuf.Empty);
    rpc updateUpload(UploadProto) returns (google.protobuf.Empty);
    rpc updateSubmission(SubmissionProto) returns (google.protobuf.Empty);
    rpc updateSubmissionImage(SubmissionImageProto) returns (google.protobuf.Empty);
    rpc getAllUploadTypeIds(google.protobuf.Empty) returns (EntityIdsProto);
    rpc getAllUploadStatusIds(google.protobuf.Empty) returns (EntityIdsProto);
    rpc getAllSubmissionTypeIds(google.protobuf.Empty) returns (EntityIdsProto);
    rpc getAllSubmissionStatusIds(google.protobuf.Empty) returns (EntityIdsProto);
    rpc getAllMimeTypeIds(google.protobuf.Empty) returns (EntityIdsProto);
    rpc loadUploadTypes(EntityIdsProto) returns (EntityListProto);
    rpc loadUploadStatuses(EntityIdsProto) returns (EntityListProto);
    rpc loadSubmissionTypes(EntityIdsProto) returns (EntityListProto);
    rpc loadSubmissionStatuses(EntityIdsProto) returns (EntityListProto);
    rpc loadUploads(EntityIdsProto) returns (UploadCompleteListProto);
    rpc loadSubmissions(EntityIdsProto) returns (SubmissionCompleteListProto);
    rpc getImagesForSubmission(IdProto) returns (SubmissionImageListProto);
    rpc loadMimeTypes(EntityIdsProto) returns (MimeTypeListProto);
}